--- a/pages/3658.html
+++ b/pages/3658.html
@@ -317,7 +317,15 @@ margin-left: 0em;
 
 <h4 id="aqft">AQFT</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>: <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
+<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>:</p><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic</a>, <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean</a>, <a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal</a></p>
+</li>
+</ul><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
 
@@ -1571,14 +1579,24 @@ R(f) := \hat f |_{X^+_m} \; \text{with} \; \hat f := \mathcal{F}(f) = \int_M e^{
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/conformal+net">conformal net</a>, <a class="existingWikiWord" href="/nlab/show/conformal+bootstrap">conformal bootstrap</a></p>
 </li>
+
+<li>
+<p>analog for <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean field theory</a>: <a class="existingWikiWord" href="/nlab/show/Osterwalder-Schrader+axioms">Osterwalder-Schrader axioms</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
 
-<p>The original reference is</p>
+<p>The original texts are</p>
 
 <ul>
-<li>Raymond F. Streater and <a class="existingWikiWord" href="/nlab/show/Arthur+Wightman">Arthur Wightman</a>: “PCT, spin and statistics, and all that.” (<a href="http://www.zentralblatt-math.org/zmath/en/advanced/?q=an:1026.81027&amp;format=complete">ZMATH entry</a> of the newest edition).</li>
+<li>
+<p>A. S. Wightman, L. Gårding, <em>Fields as Operator-valued Distributions in Relativistic Quantum Theory</em>, Arkiv f. Fysik, Kungl. Svenska Vetenskapsak. 28, 129–189 (1964).</p>
+</li>
+
+<li>
+<p>Raymond F. Streater, <a class="existingWikiWord" href="/nlab/show/Arthur+Wightman">Arthur Wightman</a>, <em>PCT, spin and statistics, and all that</em>, Princeton University Press 1989 (<a href="https://www.jstor.org/stable/j.ctt1cx3vcq">jstor</a>, <a href="http://www.zentralblatt-math.org/zmath/en/advanced/?q=an:1026.81027&amp;format=complete">ZMATH</a> of the newest edition).</p>
+</li>
 </ul>
 
 <p>Raymond Streater relates some historical background about the book and the approach <a href="http://www.mth.kcl.ac.uk/~streater/wightman.html">on his webpage</a>.</p>
@@ -1600,20 +1618,26 @@ R(f) := \hat f |_{X^+_m} \; \text{with} \; \hat f := \mathcal{F}(f) = \int_M e^{
 <ul>
 <li>Joel Feldman, <a class="existingWikiWord" href="/nlab/show/Konrad+Osterwalder">Konrad Osterwalder</a>, <em>The Wightman axioms and the mass gap for weakly coupled <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msubsup><mi>phi</mi> <mn>3</mn> <mn>4</mn></msubsup></mrow><annotation encoding="application/x-tex">phi_3^4</annotation></semantics></math> quantum field theories</em>, Ann. Physics 97 (1976), 80–135</li>
 </ul>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Wightman_axioms">Wightman axioms</a></em></li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November  5, 2018 at 09:17:34.
+  Last revised on November  9, 2018 at 10:43:15.
   See the <a href="https://ncatlab.org/nlab/history/Wightman axioms" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Wightman+axioms" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wightman+axioms/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/Wightman+axioms" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wightman+axioms" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Wightman+axioms" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wightman+axioms/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/Wightman+axioms" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wightman+axioms" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Wightman axioms/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
