--- a/pages/18905.html
+++ b/pages/18905.html
@@ -891,7 +891,7 @@ margin-left: 0em;
 
 <p>The first precise formulation seems to be due to <a href="#HoeghKrohn74">Høegh-Krohn 74</a> (in 1+1 dimensions) and a more comprehensive discussion in view of the <a class="existingWikiWord" href="/nlab/show/Osterwalder-Schrader+theorem">Osterwalder-Schrader theorem</a> for compact Euclidean time is due to <a href="#KleinLandau81">Klein-Landau 81</a>.</p>
 
-<p>The use of a “periodic Euclidean time coordinate” is also known as <em><a class="existingWikiWord" href="/nlab/show/Matsubara+formalism">Matsubara formalism</a></em> (e.g. <a href="#LandsmanVanWert87">Landsman-vanWert 87, section 2.3.1</a>) and specifically the condition that the periodicity has to be <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta \coloneqq 1/T</annotation></semantics></math> is known as the <em><a class="existingWikiWord" href="/nlab/show/KMS+conditions">KMS conditions</a></em> (For <em>Kubo-Martin-Schwinger</em>, due to <a href="#Kubo57">Kubo 57</a>, <a href="#MartinSchwinger59">Martin-Schwinger 59</a> with its final form due to <a href="#HaagHugenholtzWinnink67">Haag-Hugenholtz-Winnink 67</a>, see <a href="#FullingRuijsenaars87">Fulling-Ruijsenaars 87, section 3.1</a>).</p>
+<p>The use of a “periodic Euclidean time coordinate” is also known as <em><a class="existingWikiWord" href="/nlab/show/Matsubara+formalism">Matsubara formalism</a></em> (e.g. <a href="#LandsmanVanWert87">Landsman-vanWert 87, section 2.3.1</a>) and specifically the condition that the periodicity has to be <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta \coloneqq 1/T</annotation></semantics></math> is known as the <em><a class="existingWikiWord" href="/nlab/show/KMS+conditions">KMS conditions</a></em> for a <em><a class="existingWikiWord" href="/nlab/show/KMS+state">KMS state</a></em> (For <em>Kubo-Martin-Schwinger</em>, due to <a href="#Kubo57">Kubo 57</a>, <a href="#MartinSchwinger59">Martin-Schwinger 59</a> with its final form due to <a href="#HaagHugenholtzWinnink67">Haag-Hugenholtz-Winnink 67</a>, see <a href="#FullingRuijsenaars87">Fulling-Ruijsenaars 87, section 3.1</a>).</p>
 
 <p>Beware that literature discussing the KMS-condition often does not make the periodicity of Euclidean time explicit, and vice versa. This is clarified in <a href="#FullingRuijsenaars87">Fulling-Ruijsenaars 87, sections 2 and 3</a>.</p>
 
@@ -934,6 +934,10 @@ margin-left: 0em;
 <ul>
 <li id="BergbauerBrunettiKreimer09">
 <p><a class="existingWikiWord" href="/nlab/show/Christoph+Bergbauer">Christoph Bergbauer</a>, <a class="existingWikiWord" href="/nlab/show/Romeo+Brunetti">Romeo Brunetti</a>, <a class="existingWikiWord" href="/nlab/show/Dirk+Kreimer">Dirk Kreimer</a>, <em>Renormalization and resolution of singularities</em> (<a href="https://arxiv.org/abs/0908.0633">arXiv:0908.0633</a>)</p>
+</li>
+
+<li id="Bergbauer09">
+<p><a class="existingWikiWord" href="/nlab/show/Christoph+Bergbauer">Christoph Bergbauer</a>, <em>Renormalization and resolution of singularities</em>, talks as IHES and Boston, 2009 (<a href="http://www.emg.uni-mainz.de/Dateien/bergbauer.pdf">pdf</a>)</p>
 </li>
 
 <li id="Berghoff14a">
@@ -1078,14 +1082,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  9, 2018 at 06:17:56.
+  Last revised on November  9, 2018 at 10:49:40.
   See the <a href="https://ncatlab.org/nlab/history/Euclidean field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Euclidean+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euclidean+field+theory/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Euclidean+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euclidean+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Euclidean+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euclidean+field+theory/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Euclidean+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euclidean+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Euclidean field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
