--- a/pages/17343.html
+++ b/pages/17343.html
@@ -3623,7 +3623,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> be fibrant. If there is a <a class="existingWikiWord" href="/nlab/show/right+homotopy">right homotopy</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>f</mi><msub><mo>⇒</mo> <mi>R</mi></msub><mi>g</mi></mrow><annotation encoding="application/x-tex">f \Rightarrow_R g</annotation></semantics></math> then there is also a <a class="existingWikiWord" href="/nlab/show/left+homotopy">left homotopy</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>f</mi><msub><mo>⇒</mo> <mi>L</mi></msub><mi>g</mi></mrow><annotation encoding="application/x-tex">f \Rightarrow_L g</annotation></semantics></math> with respect to any chosen cylinder object.</p>
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi></mrow><annotation encoding="application/x-tex">Y</annotation></semantics></math> be fibrant. If there is a <a class="existingWikiWord" href="/nlab/show/right+homotopy">right homotopy</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>f</mi><msub><mo>⇒</mo> <mi>R</mi></msub><mi>g</mi></mrow><annotation encoding="application/x-tex">f \Rightarrow_R g</annotation></semantics></math> then there is also a <a class="existingWikiWord" href="/nlab/show/left+homotopy">left homotopy</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>f</mi><msub><mo>⇒</mo> <mi>L</mi></msub><mi>g</mi></mrow><annotation encoding="application/x-tex">f \Rightarrow_L g</annotation></semantics></math> with respect to any chosen cylinder object.</p>
 </li>
 </ol>
 
@@ -10397,7 +10397,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  9, 2018 at 11:53:50.
+  Last revised on November  9, 2018 at 12:09:58.
   See the <a href="https://ncatlab.org/nlab/history/Introduction to Homotopy Theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
