--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,73 +308,21 @@ margin-left: 0em;
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><mrow><mrow><mtable><mtr><mtd><mtext>relativistic field theory</mtext></mtd></mtr> <mtr><mtd><mtext>on Minkowski spacetime</mtext></mtd></mtr> <mtr><mtd><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup></mtd></mtr> <mtr><mtd><mtext>in a thermal equilibrium state</mtext></mtd></mtr> <mtr><mtd><mtext>at temperature</mtext><mspace width="thickmathspace"></mspace><mi>T</mi></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mover><mo>↔</mo><mtext>Wick rotation</mtext></mover><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>Euclidean field theory</mtext></mtd></mtr> <mtr><mtd><mtext>on Euclidean space</mtext></mtd></mtr> <mtr><mtd><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msubsup><mi>S</mi> <mi>β</mi> <mn>1</mn></msubsup></mtd></mtr> <mtr><mtd><mtext>with compact/periodic Euclidean time</mtext></mtd></mtr> <mtr><mtd><mtext>of length</mtext><mspace width="thickmathspace"></mspace><mi>β</mi><mo>=</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mtd></mtr></mtable></mrow></mrow></mtd></mtr> <mtr><mtd><mphantom><mi>A</mi></mphantom></mtd></mtr> <mtr><mtd><munder><munder><mrow><msub><mrow><mo>⟨</mo><mi>T</mi><mo stretchy="false">|</mo><mo>:</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mi>⋯</mi><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mo>:</mo><mo stretchy="false">|</mo><mi>T</mi><mo>⟩</mo></mrow> <mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup></mrow></msub></mrow><mo>⏟</mo></munder><mfrac linethickness="0"><mrow><mtext>n-point function of relativistic fields</mtext></mrow><mrow><mtext> in thermal equilibrium state </mtext><mspace width="thickmathspace"></mspace><mo stretchy="false">|</mo><mi>T</mi><mo stretchy="false">⟩</mo></mrow></mfrac></munder></mtd> <mtd><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace></mtd> <mtd><munder><munder><mrow><msub><mrow><mo>⟨</mo><mn>0</mn><mo stretchy="false">|</mo><mo stretchy="false">⟨</mo><mo>:</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mi>⋯</mi><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy="false">)</mo><mo>:</mo><mo stretchy="false">|</mo><mn>0</mn><mo>⟩</mo></mrow> <mrow><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msubsup><mi>S</mi> <mi>β</mi> <mn>1</mn></msubsup></mrow></msub></mrow><mo>⏟</mo></munder><mtext>correlator of Euclidean fields</mtext></munder></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
-  \array{
-  \left.
-  \array{
-     \text{relativistic field theory}
-     \\
-     \text{on Minkowski spacetime}
-     \\
-     \mathbb{R}^{d,1}
-     \\
-     \text{in a thermal equilibrium state}
-     \\
-     \text{at temperature}\; T
-  }
-  \right\}
-  &amp;
-  \;\;\;\;
-  \overset{ \text{Wick rotation} }{\leftrightarrow}
-  \;\;\;\;
-  &amp;
-  \left\{
-  \array{
-    \text{Euclidean field theory}
-    \\
-    \text{on Euclidean space}
-    \\
-    \mathbb{R}^d \times S^1_{\beta}
-    \\
-    \text{with compact/periodic Euclidean time}
-    \\
-    \text{of length} \; \beta = 1/T
-  }
-  \right.
-  \\
-  \phantom{A}
-  \\
-  \underset{
-    \text{n-point function of relativistic fields}
-    \atop
-    \text{ in thermal equilibrium state } \; \vert T\rangle
-  }{
-  \underbrace{
-    \left\langle  T\vert  :\mathbf{\Phi}(x_1,t) \mathbf{\Phi}(x_2,t) \cdots \mathbf{\Phi}(x_n,t) : \vert T \right\rangle_{\mathbb{R}^{d,1}}
-  }}
-  &amp;\;=\;&amp;
-  \underset{
-    \text{correlator of Euclidean fields}
-  }{
-  \underbrace{
-  \left\langle 0 \vert \langle  :\mathbf{\Phi}(x_1) \mathbf{\Phi}(x_2) \cdots \mathbf{\Phi}(x_n) : \vert 0 \right\rangle_{\mathbb{R}^{d} \times S^1_{\beta}}
-  }}
-  }
-
-</annotation></semantics></math></div></body></html>
+<body><table><thead><tr><th>Table</th><th>me</th></tr></thead><tbody><tr><td style="text-align: left;">hi <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math></td><td style="text-align: left;">you</td></tr>
+</tbody></table></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November  9, 2018 at 04:08:15.
+  Last revised on November  9, 2018 at 20:18:50.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1718" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1718 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1719" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1719 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
