--- a/pages/9148.html
+++ b/pages/9148.html
@@ -901,9 +901,9 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>The <em>Ising model</em> is a simple <a class="existingWikiWord" href="/nlab/show/model+%28in+theoretical+physics%29">model (in theoretical physics)</a> of <a class="existingWikiWord" href="/nlab/show/physical+systems">physical systems</a> roughly similar to ferromagnets. Its configurations are functions on a lattice with values in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">{</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn><mo>,</mo><mo lspace="verythinmathspace" rspace="0em">+</mo><mn>1</mn><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">\{-1,+1\}</annotation></semantics></math>, roughly to be thought of as the magnetic polarizations of elementrary magnets in a crystal lattice.</p>
+<p>The <em>Ising model</em> is a simple <a class="existingWikiWord" href="/nlab/show/model+%28in+theoretical+physics%29">model (in theoretical physics)</a> of <a class="existingWikiWord" href="/nlab/show/physical+systems">physical systems</a> roughly similar to ferromagnets. Its configurations are functions on a lattice with values in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">{</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn><mo>,</mo><mo lspace="verythinmathspace" rspace="0em">+</mo><mn>1</mn><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">\{-1,+1\}</annotation></semantics></math>, roughly to be thought of as the magnetic polarizations of elementary magnets in a crystal lattice.</p>
 
-<p>The Ising model gained importance as a toy model in theoretical <a class="existingWikiWord" href="/nlab/show/physics">physics</a>. It is about the simplest possuble model that allows methods of <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a> in <a class="existingWikiWord" href="/nlab/show/statistical+physics">statistical physics</a> and the study of <span class="newWikiWord">critical phenomena<a href="/nlab/new/critical+phenomena">?</a></span>. In fact at a critical <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> and in <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> 2 the model exibits the behaviour of a <a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a>, one of the examples of <a class="existingWikiWord" href="/nlab/show/rational+conformal+field+theory">rational conformal field theory</a>.</p>
+<p>The Ising model gained importance as a toy model in theoretical <a class="existingWikiWord" href="/nlab/show/physics">physics</a>. It is about the simplest possible model that allows methods of <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a> in <a class="existingWikiWord" href="/nlab/show/statistical+physics">statistical physics</a> and the study of <span class="newWikiWord">critical phenomena<a href="/nlab/new/critical+phenomena">?</a></span>. In fact at a critical <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> and in <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> 2 the model exibits the behaviour of a <a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a>, one of the examples of <a class="existingWikiWord" href="/nlab/show/rational+conformal+field+theory">rational conformal field theory</a>.</p>
 
 <p>Real-world <a class="existingWikiWord" href="/nlab/show/physical+systems">physical systems</a> that show behaviour described by the Ising model were only found later (<a href="#Wolf">Wolf</a>).</p>
 
@@ -948,14 +948,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  8, 2018 at 10:00:51.
+  Last revised on November 10, 2018 at 02:53:35.
   See the <a href="https://ncatlab.org/nlab/history/Ising model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Ising+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ising+model/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Ising+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ising+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Ising+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ising+model/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Ising+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ising+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Ising model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
