--- a/pages/16080.html
+++ b/pages/16080.html
@@ -915,7 +915,7 @@ margin-left: 0em;
 <p>Discussion in the context of the <a class="existingWikiWord" href="/nlab/show/FRS-formalism">FRS-formalism</a> <a class="existingWikiWord" href="/nlab/show/QFT+with+defects">with defects</a> includes</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/J%C3%BCrg+Fr%C3%B6hlich">Jürg Fröhlich</a>, <a class="existingWikiWord" href="/nlab/show/J%C3%BCrgen+Fuchs">Jürgen Fuchs</a>, <a class="existingWikiWord" href="/nlab/show/Ingo+Runkel">Ingo Runkel</a>, <a class="existingWikiWord" href="/nlab/show/Christoph+Schweigert">Christoph Schweigert</a>, <em>Kramers-Wannier duality from conformal defects</em> (<a href="http://arxiv.org/abs/cond-mat/0404051">arXiv:cond-mat/0404051</a>)</li>
+<li id="FFRS04"><a class="existingWikiWord" href="/nlab/show/J%C3%BCrg+Fr%C3%B6hlich">Jürg Fröhlich</a>, <a class="existingWikiWord" href="/nlab/show/J%C3%BCrgen+Fuchs">Jürgen Fuchs</a>, <a class="existingWikiWord" href="/nlab/show/Ingo+Runkel">Ingo Runkel</a>, <a class="existingWikiWord" href="/nlab/show/Christoph+Schweigert">Christoph Schweigert</a>, <em>Kramers-Wannier duality from conformal defects</em>, Phys.Rev.Lett. 93 (2004) 070601 (<a href="http://arxiv.org/abs/cond-mat/0404051">arXiv:cond-mat/0404051</a>)</li>
 </ul>
 
 <p>Here in <a class="existingWikiWord" href="/nlab/show/FRS-formalism">FRS-formalism</a> a <a class="existingWikiWord" href="/nlab/show/2d+CFT">2d CFT</a> is formalized as a <a class="existingWikiWord" href="/nlab/show/boundary+field+theory">boundary field theory</a> to a 3d <a class="existingWikiWord" href="/nlab/show/TQFT">TQFT</a> based on the <a class="existingWikiWord" href="/nlab/show/Turaev-Viro+model">Turaev-Viro model</a>, similar to the <a class="existingWikiWord" href="/nlab/show/CS-WZW+correspondence">CS-WZW correspondence</a>.</p>
@@ -931,14 +931,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 10, 2018 at 03:32:21.
+  Last revised on November 10, 2018 at 04:47:35.
   See the <a href="https://ncatlab.org/nlab/history/Kramers-Wannier duality" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Kramers-Wannier+duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kramers-Wannier+duality/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Kramers-Wannier+duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kramers-Wannier+duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Kramers-Wannier+duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kramers-Wannier+duality/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Kramers-Wannier+duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kramers-Wannier+duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Kramers-Wannier duality/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
