--- a/pages/8972.html
+++ b/pages/8972.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/7046/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/7046/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -458,7 +458,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Robert+Harper">Robert Harper</a></p>
 
-<p><em>Practical Foundations for Programming Languages, second edition</em>, Cambridge University Press (2016), (<a href="http://www.cambridge.org/us/academic/subjects/computer-science/programming-languages-and-applied-logic/practical-foundations-programming-languages-2nd-edition?format=HB">webpage</a>)</p>
+<p><em>Practical Foundations for Programming Languages,</em></p>
+
+<p>Cambridge University Press (2016)</p>
+
+<p>(<a href="http://www.cambridge.org/us/academic/subjects/computer-science/programming-languages-and-applied-logic/practical-foundations-programming-languages-2nd-edition?format=HB">webpage</a>)</p>
 </li>
 </ul>
 
@@ -469,7 +473,21 @@ margin-left: 0em;
 <h2 id="related_entries">Related entries</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Practical+Foundations+of+Mathematics">Practical Foundations of Mathematics</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Paul+Taylor">Paul Taylor</a></p>
+
+<p><em><a class="existingWikiWord" href="/nlab/show/Practical+Foundations+of+Mathematics">Practical Foundations of Mathematics</a></em></p>
+
+<p>(<a href="http://www.paultaylor.eu/~pt/prafm/index.html">web</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/William+Lawvere">William Lawvere</a>, <a class="existingWikiWord" href="/nlab/show/Robert+Rosebrugh">Robert Rosebrugh</a>,</p>
+
+<p><em><a class="existingWikiWord" href="/nlab/show/Sets+for+Mathematics">Sets for Mathematics</a></em>,</p>
+
+<p>Cambridge UP 2003 (<a href="http://www.mta.ca/~rrosebru/setsformath/">book homepage</a>, <a href="http://books.google.de/books?id=h3_7aZz9ZMoC&amp;pg=PP1&amp;dq=sets+for+mathematics">GoogleBooks</a>, <a href="http://patryshev.com/books/Sets%20for%20Mathematics.pdf">pdf</a>)</p>
+</li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/reference">reference</a>, <a class="category_link" href="/nlab/all_pages/applications">applications</a></div></body></html>
 
@@ -477,14 +495,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  9, 2018 at 10:32:35.
+  Last revised on November 10, 2018 at 07:53:35.
   See the <a href="https://ncatlab.org/nlab/history/Practical Foundations for Programming Languages" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Practical+Foundations+for+Programming+Languages" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Practical+Foundations+for+Programming+Languages/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Practical+Foundations+for+Programming+Languages" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Practical+Foundations+for+Programming+Languages" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Practical+Foundations+for+Programming+Languages" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Practical+Foundations+for+Programming+Languages/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Practical+Foundations+for+Programming+Languages" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Practical+Foundations+for+Programming+Languages" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Practical Foundations for Programming Languages/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
