--- a/pages/10305.html
+++ b/pages/10305.html
@@ -927,6 +927,10 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<ul>
+<li>Paul Hoyer, <em>Bound states – from QED to QCD</em>, Lectures at “Mini-school on theoretical methods in particle physics” at the Higgs Centre for Theoretical Physics, University of Edinburgh on 30 September to 4 October 2013 (<a href="https://arxiv.org/abs/1402.5005">arXiv:1402.5005</a>)</li>
+</ul>
+
 <p>See also</p>
 
 <ul>
@@ -938,14 +942,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 08:00:12.
+  Last revised on November 11, 2018 at 05:40:26.
   See the <a href="https://ncatlab.org/nlab/history/bound state" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/bound+state" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bound+state/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/bound+state" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bound+state" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/bound+state" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bound+state/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/bound+state" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bound+state" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/bound state/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
