--- a/pages/9687.html
+++ b/pages/9687.html
@@ -1173,6 +1173,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p>Yuri L. Dokshitzer, around section 1.2 of <em>QCD Phenomenology</em> (<a href="https://arxiv.org/abs/hep-ph/0306287"></a>)</p>
+</li>
+
+<li>
 <p>Wikipedia, <em><a href="http://en.wikipedia.org/wiki/Color_confinement">Color confinement</a></em></p>
 </li>
 
@@ -1300,14 +1304,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 11, 2018 at 05:57:16.
+  Last revised on November 11, 2018 at 05:49:41.
   See the <a href="https://ncatlab.org/nlab/history/confinement" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/confinement/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
