--- a/pages/7613.html
+++ b/pages/7613.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -889,7 +889,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>The relation also to the <a class="existingWikiWord" href="/nlab/show/heterotic+string">heterotic string</a> was understood in (<a href="#HoravaWitten95">Horava-Witten 95</a>)❛ see at <em><span class="newWikiWord">Ho?ava-Witten theory<a href="/nlab/new/Ho%3Fava-Witten+theory">?</a></span></em>.</p>
+<p>The relation also to the <a class="existingWikiWord" href="/nlab/show/heterotic+string">heterotic string</a> was understood in (<a href="#HoravaWitten95">Horava-Witten 95</a>)❛ see at <em><a class="existingWikiWord" href="/nlab/show/Horava-Witten+theory">Horava-Witten theory</a></em>.</p>
 
 <p>More technical surveys include</p>
 
@@ -976,14 +976,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 26, 2018 at 09:25:44.
+  Last revised on November 11, 2018 at 07:45:42.
   See the <a href="https://ncatlab.org/nlab/history/M-theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/M-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/M-theory/55" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(55 revisions)</span> | <a href="/nlab/show/diff/M-theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/M-theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/M-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/M-theory/56" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(56 revisions)</span> | <a href="/nlab/show/diff/M-theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/M-theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/M-theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
