--- a/pages/9880.html
+++ b/pages/9880.html
@@ -488,7 +488,7 @@ margin-left: 0em;
 
 <h3 id="confinement_and_the_mass_gap">Confinement and the mass gap</h3>
 
-<p>A central example of a non-perturbative effect is <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> (hence the “mass gap”) in <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>. Perturbation theory is not suited to explain this (e.g <a href="http://arxiv.org/abs/hep-ph/9410287">Espiru 94, section 7</a>).</p>
+<p>A central example of a non-perturbative effect is <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> (hence the “<a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a>”) in <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>. Perturbation theory is not suited to explain this (e.g <a href="http://arxiv.org/abs/hep-ph/9410287">Espiru 94, section 7</a>).</p>
 
 <h3 id="WorldsheetAndBraneInstantons">Worldsheet and brane instantons in string/M-theory</h3>
 
@@ -610,6 +610,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/proton+spin+crisis">proton spin crisis</a></p>
+</li>
+
+<li>
 <p><a href="string+theory+FAQ#NonConvergenceOfPerturbationSeries">string theory FAQ – Isn’t it fatal that the string perturbation series does not converge?</a></p>
 </li>
 </ul>
@@ -699,14 +703,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 11, 2018 at 05:41:53.
+  Last revised on November 11, 2018 at 10:35:51.
   See the <a href="https://ncatlab.org/nlab/history/non-perturbative effect" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/non-perturbative+effect" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-perturbative+effect/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/non-perturbative+effect" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-perturbative+effect" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/non-perturbative+effect" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-perturbative+effect/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/non-perturbative+effect" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-perturbative+effect" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/non-perturbative effect/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
