--- a/pages/18608.html
+++ b/pages/18608.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9264/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9264/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1082,7 +1082,7 @@ margin-left: 0em;
 
 <h3 id="Phenomenology">Phenomenology</h3>
 
-<p>In the application of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> to <a class="existingWikiWord" href="/nlab/show/particle+physics">particle physics</a> <a class="existingWikiWord" href="/nlab/show/phenomenology">phenomenology</a>, the mass gap problem is incarnated in the open problem of demonstrating <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> of <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> at low energies to colour-neutral <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a>, hence to <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a>/<a class="existingWikiWord" href="/nlab/show/baryons">baryons</a> (hence the existence of ordinary <a class="existingWikiWord" href="/nlab/show/matter">matter</a>!). There does exist some qualitative understanding as well as computer simulations in <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a>, but there remain fundamental issues with deriving basic properties of <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> such as their <a class="existingWikiWord" href="/nlab/show/mass">mass</a> (e.g. <a href="#Kutschke96">Kutschke 96, Section 3.1</a>) and <a class="existingWikiWord" href="/nlab/show/spin">spin</a> (the “<span class="newWikiWord">proton spin crisis<a href="/nlab/new/proton+spin+crisis">?</a></span>”).</p>
+<p>In the application of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> to <a class="existingWikiWord" href="/nlab/show/particle+physics">particle physics</a> <a class="existingWikiWord" href="/nlab/show/phenomenology">phenomenology</a>, the mass gap problem is incarnated in the open problem of demonstrating <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> of <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> at low energies to colour-neutral <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a>, hence to <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a>/<a class="existingWikiWord" href="/nlab/show/baryons">baryons</a> (hence the existence of ordinary <a class="existingWikiWord" href="/nlab/show/matter">matter</a>!). There does exist some qualitative understanding as well as computer simulations in <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a>, but there remain fundamental issues with deriving basic properties of <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> such as their <a class="existingWikiWord" href="/nlab/show/mass">mass</a> (e.g. <a href="#Kutschke96">Kutschke 96, Section 3.1</a>) and <a class="existingWikiWord" href="/nlab/show/spin">spin</a> (the “<a class="existingWikiWord" href="/nlab/show/proton+spin+crisis">proton spin crisis</a>”).</p>
 
 <p>This is widely and well known, but particle physics does not quite share the mathematician’s culture of succinctly highlighting open problems. Here are some sources that make this explicit:</p>
 
@@ -1094,6 +1094,18 @@ margin-left: 0em;
 <p>While it is generally believed that QCD is the correct fundamental theory of the strong interactions there are, as yet, no practical means to produce full QCD calculations of hadron masses and their decay widths.</p>
 </blockquote>
 
+<p>High-accuracy computation of <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a>-<a class="existingWikiWord" href="/nlab/show/masses">masses</a> in <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> are reported here:</p>
+
+<ul>
+<li>
+<p>S. Durr, Z. Fodor, J. Frison, C. Hoelbling, R. Hoffmann, S.D. Katz, S. Krieg, T. Kurth, L. Lellouch, T. Lippert, K.K. Szabo, G. Vulvert,</p>
+
+<p><em>Ab-initio Determination of Light Hadron Masses</em>,</p>
+
+<p>Science 322:1224-1227,2008 (<a href="https://arxiv.org/abs/0906.3599">arXiv:0906.3599</a>)</p>
+</li>
+</ul>
+
 <p>(…)</p>
 </body></html>
 
@@ -1101,14 +1113,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 11, 2018 at 09:57:27.
+  Last revised on November 11, 2018 at 10:52:48.
   See the <a href="https://ncatlab.org/nlab/history/mass gap" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/mass+gap" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mass+gap/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/mass+gap" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mass+gap" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/mass+gap" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mass+gap/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/mass+gap" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mass+gap" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/mass gap/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
