--- a/pages/8771.html
+++ b/pages/8771.html
@@ -317,6 +317,7 @@ margin-left: 0em;
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#definition'>Definition</a></li>
 <li><a href='#terminology'>Terminology</a></li>
+<li><a href='#properties'>Properties</a></li>
 <li><a href='#examples'>Examples</a></li>
 </ul>
 </div>
@@ -332,6 +333,12 @@ margin-left: 0em;
 <h2 id="terminology">Terminology</h2>
 
 <p>The term <em>dioid</em> is sometimes used as an alternative name for idempotent semirings.</p>
+
+<h2 id="properties">Properties</h2>
+
+<p>On a semiring there is a partial order given by</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>x</mi><mo>≤</mo><mi>y</mi><mo>:</mo><mo>⇔</mo><mi>x</mi><mo>+</mo><mi>y</mi><mo>=</mo><mi>y</mi><mo>.</mo></mrow><annotation encoding="application/x-tex"> x \leq y : \iff x + y = y. </annotation></semantics></math></div>
+<p>To check transitivity observe that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi><mo>≤</mo><mi>y</mi></mrow><annotation encoding="application/x-tex"> x \leq y </annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>y</mi><mo>≤</mo><mi>z</mi></mrow><annotation encoding="application/x-tex"> y \leq z</annotation></semantics></math> imply <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>z</mi><mover><mo>=</mo><mrow><mi>y</mi><mo>≤</mo><mi>z</mi></mrow></mover><mi>y</mi><mo>+</mo><mi>z</mi><mover><mo>=</mo><mrow><mi>x</mi><mo>≤</mo><mi>y</mi></mrow></mover><mo stretchy="false">(</mo><mi>x</mi><mo>+</mo><mi>y</mi><mo stretchy="false">)</mo><mo>+</mo><mi>z</mi><mo>=</mo><mi>x</mi><mo>+</mo><mo stretchy="false">(</mo><mi>y</mi><mo>+</mo><mi>z</mi><mo stretchy="false">)</mo><mover><mo>=</mo><mrow><mi>y</mi><mo>≤</mo><mi>z</mi></mrow></mover><mi>x</mi><mo>+</mo><mi>z</mi></mrow><annotation encoding="application/x-tex"> z \stackrel{y \leq z}{=} y + z \stackrel{x \leq y}{=} (x + y) + z = x + (y + z) \stackrel{y \leq z}{=} x + z </annotation></semantics></math>. The addition is a <a class="existingWikiWord" href="/nlab/show/join">join</a> with respect to this partial order. The partial order is preserved by multiplication.</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -354,14 +361,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 10, 2018 at 10:05:33.
+  Last revised on November 11, 2018 at 10:28:30.
   See the <a href="https://ncatlab.org/nlab/history/idempotent semiring" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/idempotent+semiring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/idempotent+semiring/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/idempotent+semiring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/idempotent+semiring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/idempotent+semiring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/idempotent+semiring/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/idempotent+semiring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/idempotent+semiring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/idempotent semiring/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
