--- a/pages/9687.html
+++ b/pages/9687.html
@@ -1152,9 +1152,17 @@ margin-left: 0em;
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/asymptotic+freedom">asymptotic freedom</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/asymptotic+freedom">asymptotic freedom</a></p>
+</li>
 
-<li><a class="existingWikiWord" href="/nlab/show/quantization+of+Yang-Mills+theory">quantization of Yang-Mills theory</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/quantization+of+Yang-Mills+theory">quantization of Yang-Mills theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/proton+spin+crisis">proton spin crisis</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -1324,14 +1332,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 11, 2018 at 09:35:12.
+  Last revised on November 11, 2018 at 10:36:35.
   See the <a href="https://ncatlab.org/nlab/history/confinement" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/confinement/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
