--- a/pages/9961.html
+++ b/pages/9961.html
@@ -996,6 +996,18 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>Specifically computation of <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a>-<a class="existingWikiWord" href="/nlab/show/masses">masses</a> (see <a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a>) in lattice QCD is reported here:</p>
+
+<ul>
+<li>
+<p>S. Durr, Z. Fodor, J. Frison, C. Hoelbling, R. Hoffmann, S.D. Katz, S. Krieg, T. Kurth, L. Lellouch, T. Lippert, K.K. Szabo, G. Vulvert,</p>
+
+<p><em>Ab-initio Determination of Light Hadron Masses</em>,</p>
+
+<p>Science 322:1224-1227,2008 (<a href="https://arxiv.org/abs/0906.3599">arXiv:0906.3599</a>)</p>
+</li>
+</ul>
+
 <h3 id="renormalization">Renormalization</h3>
 
 <p>An proposal for a rigorous formulation of <a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a> in lattice gauge theory is due to</p>
@@ -1033,14 +1045,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  8, 2018 at 09:39:13.
+  Last revised on November 11, 2018 at 10:54:21.
   See the <a href="https://ncatlab.org/nlab/history/lattice gauge theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/lattice+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/lattice+gauge+theory/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/lattice+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/lattice+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/lattice+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/lattice+gauge+theory/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/lattice+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/lattice+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/lattice gauge theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
