--- a/pages/18608.html
+++ b/pages/18608.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9264/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9264/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1051,9 +1051,7 @@ margin-left: 0em;
 <p>and a report on the progress (essentially none) is in</p>
 
 <ul>
-<li id="Douglas04"><a class="existingWikiWord" href="/nlab/show/Michael+Douglas">Michael Douglas</a>, <em>Report on the Status of the Yang-Mills</em>
-<p>Millenium Prize Problem_, 2004 (<a href="http://www.claymath.org/sites/default/files/ym2.pdf">pdf</a>)</p>
-</li>
+<li id="Douglas04"><a class="existingWikiWord" href="/nlab/show/Michael+Douglas">Michael Douglas</a>, <em>Report on the Status of the Yang-Mills Millenium Prize Problem</em>, 2004 (<a href="http://www.claymath.org/sites/default/files/ym2.pdf">pdf</a>)</li>
 </ul>
 
 <p>Further comments are in</p>
@@ -1094,7 +1092,7 @@ margin-left: 0em;
 <p>While it is generally believed that QCD is the correct fundamental theory of the strong interactions there are, as yet, no practical means to produce full QCD calculations of hadron masses and their decay widths.</p>
 </blockquote>
 
-<p>High-accuracy computation of <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a>-<a class="existingWikiWord" href="/nlab/show/masses">masses</a> in <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> are reported here:</p>
+<p>High-accuracy computation of <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a>-<a class="existingWikiWord" href="/nlab/show/masses">masses</a> in <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a>-simulations are reported here:</p>
 
 <ul>
 <li>
@@ -1104,10 +1102,12 @@ margin-left: 0em;
 
 <p>Science 322:1224-1227,2008 (<a href="https://arxiv.org/abs/0906.3599">arXiv:0906.3599</a>)</p>
 </li>
+</ul>
 
-<li>
-<p>Zoltan Fodor, Christian Hoelbling, <em>Light Hadron Masses from Lattice QCD</em>, Rev. Mod. Phys. 84, 449, (<a href="https://arxiv.org/abs/1203.4789">arXiv:1203.4789</a>)</p>
-</li>
+<p>reviewed in</p>
+
+<ul>
+<li>Zoltan Fodor, Christian Hoelbling, section V of <em>Light Hadron Masses from Lattice QCD</em>, Rev. Mod. Phys. 84, 449, (<a href="https://arxiv.org/abs/1203.4789">arXiv:1203.4789</a>)</li>
 </ul>
 
 <p>(…)</p>
@@ -1117,14 +1117,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 11, 2018 at 11:20:53.
+  Last revised on November 12, 2018 at 02:50:43.
   See the <a href="https://ncatlab.org/nlab/history/mass gap" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/mass+gap" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mass+gap/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/mass+gap" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mass+gap" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/mass+gap" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mass+gap/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/mass+gap" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mass+gap" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/mass gap/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
