--- a/pages/9961.html
+++ b/pages/9961.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8531/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8531/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -897,7 +897,7 @@ margin-left: 0em;
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
-<li><a href='#ReferencesMontoCarloSimulations'>Monte-Carlo simulations</a></li>
+<li><a href='#ReferencesMontoCarloSimulations'>Computer simulations</a></li>
 <li><a href='#renormalization'>Renormalization</a></li>
 <li><a href='#topological_effects_and_instantons'>Topological effects and instantons</a></li>
 </ul>
@@ -980,7 +980,15 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id="ReferencesMontoCarloSimulations">Monte-Carlo simulations</h3>
+<h3 id="ReferencesMontoCarloSimulations">Computer simulations</h3>
+
+<p>A good general account of computer simulation of lattice <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> is in</p>
+
+<ul>
+<li id="FodorHoelbling12">Zoltan Fodor, Christian Hoelbling, sections II-IV of <em>Light Hadron Masses from Lattice QCD</em>, Rev. Mod. Phys. 84, 449 (2012) (<a href="https://arxiv.org/abs/1203.4789">arXiv:1203.4789</a>)</li>
+</ul>
+
+<p>See also</p>
 
 <ul>
 <li>
@@ -1008,9 +1016,15 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>reviwed in</p>
+
+<ul>
+<li><a href="#FodorHoelbling12">Fodor-Hoelbling 12, section V of</a></li>
+</ul>
+
 <h3 id="renormalization">Renormalization</h3>
 
-<p>An proposal for a rigorous formulation of <a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a> in lattice gauge theory is due to</p>
+<p>A proposal for a rigorous formulation of <a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a> in lattice gauge theory is due to</p>
 
 <ul>
 <li>
@@ -1036,6 +1050,8 @@ margin-left: 0em;
 
 <h3 id="topological_effects_and_instantons">Topological effects and instantons</h3>
 
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/instantons">instantons</a> in lattice QCd</p>
+
 <ul>
 <li id="Gruber13">Florian Gruber, <em>Topology in dynamical Lattice QCD simulations</em>, 2013 (<a href="http://epub.uni-regensburg.de/27631/">web</a>, <a href="http://epub.uni-regensburg.de/27631/1/dissertation.pdf">pdf</a>)</li>
 </ul>
@@ -1045,14 +1061,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 11, 2018 at 10:54:21.
+  Last revised on November 12, 2018 at 02:49:29.
   See the <a href="https://ncatlab.org/nlab/history/lattice gauge theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/lattice+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/lattice+gauge+theory/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/lattice+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/lattice+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/lattice+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/lattice+gauge+theory/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/lattice+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/lattice+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/lattice gauge theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
